--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "notesapp",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://saul-lara.github.io/NotesApp/",
   "dependencies": {
     "firebase": "^5.3.1",
+    "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
@@ -12,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
